<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.0"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="0.0"
        mapbox:mapbox_cameraZoom="11"
        mapbox:mapbox_styleUrl="mapbox://styles/s1601847/cjpiqfriy049b2rmok207hj6p">

    </com.mapbox.mapboxsdk.maps.MapView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        mapbox:backgroundTint="@color/colorPrimaryDark"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.92"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toBottomOf="@+id/Trophies"
        mapbox:layout_constraintVertical_bias="0.04000002"
        mapbox:srcCompat="@android:drawable/ic_menu_myplaces" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Trophies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        mapbox:backgroundTint="@color/colorPrimaryDark"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.92"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toBottomOf="@+id/Wallet"
        mapbox:layout_constraintVertical_bias="0.04000002"
        mapbox:srcCompat="@android:drawable/btn_star_big_off" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        mapbox:backgroundTint="@color/colorPrimaryDark"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.92"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="0.100000024"
        mapbox:srcCompat="@android:drawable/sym_action_email" />


</android.support.constraint.ConstraintLayout>

